feat: complete 5 operators

--- a/ggml-Ascend/CMakeLists.txt
+++ b/ggml-Ascend/CMakeLists.txt
@@ -18,20 +18,20 @@ set(CMAKE_CXX_FLAGS_RELEASE "-fPIC -O2 -Wall")
 add_executable(test
         main.cpp
         #test.cpp
-        aclnnOperator.cpp
-        aclnnAdd.cpp
-        aclnnArange.cpp
-        aclnnMul.cpp
-        aclnnNorm.cpp
-        aclnnDiv.cpp
-        aclnnSort.cpp
-        aclnnComp.cpp
-        aclnnClamp.cpp
-        aclnnLeaky.cpp
-        aclnnIm2Col.cpp
-        aclnnRoPE.cpp
-        aclnnSqrt.cpp
-        aclnnUnary.cpp
+        aclnn-operator.cpp
+        aclnn-add.cpp
+        aclnn-arange.cpp
+        aclnn-mul.cpp
+        aclnn-norm.cpp
+        aclnn-div.cpp
+        aclnn-sort.cpp
+        aclnn-comp.cpp
+        aclnn-clamp.cpp
+        aclnn-leaky.cpp
+        aclnn-im2col.cpp
+        aclnn-rope.cpp
+        aclnn-sqrt.cpp
+        aclnn-unary.cpp
         common.cpp)
 
 # 设置ASCEND_PATH（CANN软件包目录，请根据实际路径修改）和INCLUDE_BASE_DIR（头文件目录）
