--- a/ggml-Ascend/CMakeLists.txt
+++ b/ggml-Ascend/CMakeLists.txt
@@ -14,6 +14,9 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  "./bin")
 set(CMAKE_CXX_FLAGS_DEBUG "-fPIC -O0 -g -Wall")
 set(CMAKE_CXX_FLAGS_RELEASE "-fPIC -O2 -Wall")
 
+set(BASE_LLAMA_DIR "/home/powerinfer/Desktop/tz/llama/llama.cpp")
+file(GLOB SRC_LIST ${BASE_LLAMA_DIR}/*.cpp ${BASE_LLAMA_DIR}/llama.cpp/*.h ${BASE_LLAMA_DIR}/llama.cpp/*.c)
+
 # 设置可执行文件名（如test_1），并指定待运行算子文件*.cpp所在目录
 add_executable(test
         main.cpp
@@ -33,7 +36,8 @@ add_executable(test
         aclnn-rope.cpp
         aclnn-sqrt.cpp
         aclnn-unary.cpp
-        common.cpp)
+        common.cpp
+        ${SRC_LIST})
 
 # 设置ASCEND_PATH（CANN软件包目录，请根据实际路径修改）和INCLUDE_BASE_DIR（头文件目录）
 if(NOT "$ENV{ASCEND_CUSTOM_PATH}" STREQUAL "")
@@ -45,6 +49,7 @@ set(INCLUDE_BASE_DIR "${ASCEND_PATH}/include")
 include_directories(
         ${INCLUDE_BASE_DIR}
         ${INCLUDE_BASE_DIR}/aclnn
+        ..
 )
 
 # 设置链接的库文件路径
