--- a/ggml-Ascend/CMakeLists.txt
+++ b/ggml-Ascend/CMakeLists.txt
@@ -36,8 +36,7 @@ add_executable(test
         aclnn-rope.cpp
         aclnn-sqrt.cpp
         aclnn-unary.cpp
-        common.cpp
-        ${SRC_LIST})
+        common.cpp)
 
 # 设置ASCEND_PATH（CANN软件包目录，请根据实际路径修改）和INCLUDE_BASE_DIR（头文件目录）
 if(NOT "$ENV{ASCEND_CUSTOM_PATH}" STREQUAL "")
