--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -426,6 +426,7 @@ if (LLAMA_ASCEND)
     set(GGML_HEADERS_ASCEND ggml-ascend.h)
     file(GLOB GGML_SOURCES_ASCEND "ggml-Ascend/*.cpp")
     list(APPEND GGML_SOURCES_ASCEND "ggml-ascend.cpp")
+endif()
 
 if (LLAMA_CUDA)
     cmake_minimum_required(VERSION 3.18)  # for CMAKE_CUDA_ARCHITECTURES
