--- a/ggml-Ascend/CMakeLists.txt
+++ b/ggml-Ascend/CMakeLists.txt
@@ -25,6 +25,10 @@ add_executable(test
         aclnn-mul.cpp
         aclnn-cpy.cpp
         aclnn-unary.cpp
+        aclnn-norm.cpp
+        aclnn-comp.cpp
+        aclnn-math.cpp
+        aclnn-rope.cpp
         common.cpp)
 
 # 设置ASCEND_PATH（CANN软件包目录，请根据实际路径修改）和INCLUDE_BASE_DIR（头文件目录）
