--- a/ggml-Ascend/CMakeLists.txt
+++ b/ggml-Ascend/CMakeLists.txt
@@ -37,6 +37,7 @@ add_executable(test
         aclnn-comp.cpp
         aclnn-math.cpp
         aclnn-rope.cpp
+        aclnn-permute
         common.cpp)
 
 # 设置ASCEND_PATH（CANN软件包目录，请根据实际路径修改）和INCLUDE_BASE_DIR（头文件目录）
