--- a/ggml-Ascend/CMakeLists.txt
+++ b/ggml-Ascend/CMakeLists.txt
@@ -14,14 +14,14 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  "./bin")
 set(CMAKE_CXX_FLAGS_DEBUG "-fPIC -O0 -g -Wall")
 set(CMAKE_CXX_FLAGS_RELEASE "-fPIC -O2 -Wall")
 
-set(BASE_LLAMA_DIR "/home/powerinfer/Desktop/tz/llama/llama.cpp")
-# set(BASE_LLAMA_DIR "/home/powerinfer/CYM/llama.cpp")
+# set(BASE_LLAMA_DIR "/home/powerinfer/Desktop/tz/llama/llama.cpp")
+set(BASE_LLAMA_DIR "/home/powerinfer/CYM/llama.cpp")
 file(GLOB SRC_LIST ${BASE_LLAMA_DIR}/*.cpp ${BASE_LLAMA_DIR}/*.h ${BASE_LLAMA_DIR}/*.c)
 
 # 设置可执行文件名（如test_1），并指定待运行算子文件*.cpp所在目录
 add_executable(test
-        # test.cpp
-        main.cpp
+        test.cpp
+        # main.cpp
         aclnn-test.cpp
         aclnn-compute.cpp
         aclnn-compute-test.cpp
@@ -40,6 +40,7 @@ add_executable(test
         aclnn-math.cpp
         aclnn-rope.cpp
         aclnn-permute.cpp
+        aclnn-repeat.cpp
         common.cpp)
 
 # 设置ASCEND_PATH（CANN软件包目录，请根据实际路径修改）和INCLUDE_BASE_DIR（头文件目录）
